git-svn-id: file:///var/svn/claro-catalog@694 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/PlantinWebshop/src/main/resources/claro/plantinwebshop/website/website.config
+++ b/trunk/PlantinWebshop/src/main/resources/claro/plantinwebshop/website/website.config
@@ -1,4 +1,5 @@
-website.name=Demo Web Shop
+website.name=Plantin Web Shop
+shop.name=Plantin Web Shop
 website.server=demo.catalogxs.com
 website.locales=en,de,es
 
