git-svn-id: file:///var/svn/claro-catalog@695 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/pom.xml
+++ b/trunk/catalog-manager/pom.xml
@@ -84,7 +84,7 @@
         <configuration>
           <warSourceDirectory>war</warSourceDirectory>
           <webXml>war/WEB-INF/web.xml</webXml>
-          <outputDirectory>war</outputDirectory>
+          <outputDirectory>target</outputDirectory>
 		</configuration>
       </plugin>
     </plugins>
