git-svn-id: file:///var/svn/claro-catalog@698 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/WEB-INF/web.xml
+++ b/trunk/catalog-manager/war/WEB-INF/web.xml
@@ -12,8 +12,8 @@
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.url</param-name>
-<!--         <param-value>jdbc:postgresql://localhost:15432/catalog3</param-value> -->
-        <param-value>jdbc:postgresql:catalog3</param-value>
+<!--          <param-value>jdbc:postgresql://localhost:15432/catalog3</param-value> -->
+        <param-value>jdbc:postgresql:catalog3</param-value> -->
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.user</param-name>
@@ -56,7 +56,8 @@
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.url</param-name>
-        <param-value>jdbc:postgresql:catalog3</param-value>
+         <param-value>jdbc:postgresql:catalog3</param-value>
+ <!--         <param-value>jdbc:postgresql://localhost:15432/catalog3</param-value> -->
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.user</param-name>
