git-svn-id: file:///var/svn/claro-catalog@741 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/.classpath
+++ b/trunk/catalog-manager/.classpath
@@ -14,5 +14,6 @@
 			<attribute name="javadoc_location" value="file:/Applications/eclipse/plugins/com.google.gwt.eclipse.sdkbundle.2.1.0_2.1.0.v201010280102/gwt-2.1.0/doc/javadoc/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
