--- a/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/website.config
+++ b/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/website.config
@@ -1,6 +1,6 @@
 website.path=/webshop
 website.components=claro.cms.webshop.WebshopComponent
-entitymanager.eclipselink.jdbc.driver = org.postgresql.Driver
-entitymanager.eclipselink.jdbc.url = jdbc:postgresql:postgres
-entitymanager.eclipselink.jdbc.user = postgres
-entitymanager.eclipselink.jdbc.password = postgres
+entitymanager.javax.persistence.jdbc.driver = org.postgresql.Driver
+entitymanager.javax.persistence.jdbc.url = jdbc:postgresql:postgres
+entitymanager.javax.persistence.jdbc.user = postgres
+entitymanager.javax.persistence.jdbc.password = postgres
