--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
@@ -5,10 +5,10 @@ website.locales=en,de,es
 
 website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent
 
-entitymanager.eclipselink.jdbc.driver = org.postgresql.Driver
-entitymanager.eclipselink.jdbc.url = jdbc:postgresql:catalog3
-entitymanager.eclipselink.jdbc.user = postgres
-entitymanager.eclipselink.jdbc.password = postgres
+entitymanager.javax.persistence.jdbc.driver = org.postgresql.Driver
+entitymanager.javax.persistence.jdbc.url = jdbc:postgresql:catalog3
+entitymanager.javax.persistence.jdbc.user = postgres
+entitymanager.javax.persistence.jdbc.password = postgres
 
 mail.smtp.port=587
 mail.smtp.from=catalogxs@gmail.com
