--- a/catalog-manager/pom.xml
+++ b/catalog-manager/pom.xml
@@ -12,12 +12,17 @@
     <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
   
-
   <dependencies>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-servlet</artifactId>
+      <version>2.1.0</version>
+    </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
       <version>2.1.0</version>
+      <scope>provided</scope>
     </dependency>
     
 	<dependency>
